<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_launch</name>
  <version>1.0.0</version>
  <description>F1TENTH launch package.</description>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ad_api_adaptors</exec_depend>
  <exec_depend>autoware_iv_external_api_adaptor</exec_depend>
  <exec_depend>default_ad_api</exec_depend>
  <exec_depend>f1tenth_sensor_kit_description</exec_depend>
  <exec_depend>f1tenth_sensor_kit_launch</exec_depend>
  <exec_depend>f1tenth_vehicle_description</exec_depend>
  <exec_depend>f1tenth_vehicle_launch</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>gyro_odometer</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>map_loader</exec_depend>
  <exec_depend>map_tf_generator</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tier4_system_launch</exec_depend>
  <exec_depend>twist_to_odom</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
